--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>bài 1: Tính lương nhân viên</h1>
     <div class="bai_1">
-        <input type="text" placeholder="lương" id="so_tien"> <br>
-        <input type="text" placeholder="số ngày" id="so_ngay"> <br>
-        <input type="button" value="xuát" id="bnt_soluong">
-        <p id="so_luong"></p>
+        <input type="text" placeholder="lương" id="soTien"> <br>
+        <input type="text" placeholder="số ngày" id="soNgay"> <br>
+        <input type="button" value="xuát" id="bnt_soLuong">
+        <p id="soLuong"></p>
     </div> 
 
     <h1>bài 2: Tính giá trị TB</h1>
@@ -23,27 +23,27 @@
         <input type="number" id="so_3">
         <input type="number" id="so_4">
         <input type="number" id="so_5">
-        <input type="button" value="cong tb" id="bnt_TB">
-        <p id="so_tb"></p>
+        <input type="button" value="cong tb" id="bnt_trungBinh">
+        <p id="so_trungBinh"></p>
     </div>
 
     <h1>bài 3: Quy đổi tiền</h1>
     <div class="bai_3">
-        <input type="text" placeholder="số tiền" id="so_tien_quy_doi"> <br>
-        <input type="button" value="xuát" id="bnt_sotien">
+        <input type="text" placeholder="số tiền" id="soTienCanQuyDoi"> <br>
+        <input type="button" value="xuát" id="bnt_soTien">
     </div> 
 
 
     <h1>bài 4: tính diện tích, chu vi HCN</h1>
     <input type="text" placeholder="Chiều dài" id="chieuDai">
     <input type="text" placeholder="Chiều rộng" id="chieuRong">
-    <input type="button" value="Tính" id="bnt_CM">
+    <input type="button" value="Tính" id="bnt_giaTri">
     
 
     <h1>Bài 5: Tính tổng 2 ký số</h1>
 
     <input type="text" placeholder="nhập hai số" id="so">
-    <input type="button" value="cho ra giá trị" id="bnt_So">
+    <input type="button" value="cho ra giá trị" id="bnt_so">
 
      <script src="./js/main.js"></script>
 </body>
